[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/Panes/ShapePicker.gd" type="Script" id=1]
[ext_resource path="res://UI/Widgets/BArrowButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/Widgets/BLabel.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/Widgets/BSelect.tscn" type="PackedScene" id=4]

[node name="ShapePicker" type="Control"]
margin_right = 885.0
margin_bottom = 606.0
script = ExtResource( 1 )

[node name="Grid" type="GridContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
columns = 3

[node name="BLeftArrow" parent="Grid" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 140.0
margin_bottom = 600.0

[node name="ColorRect" type="ColorRect" parent="Grid"]
margin_left = 144.0
margin_right = 744.0
margin_bottom = 600.0
rect_min_size = Vector2( 600, 600 )
color = Color( 0, 0, 0, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="Grid/ColorRect"]
margin_right = 617.0
margin_bottom = 603.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BLabel" parent="Grid/ColorRect/VBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 617.0
margin_bottom = 80.0
rect_min_size = Vector2( 420, 80 )
align = 1

[node name="BRightArrow" parent="Grid" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 748.0
margin_right = 888.0
margin_bottom = 600.0
direction = 1

[node name="Select" parent="." instance=ExtResource( 4 )]
margin_left = 341.0
margin_top = 555.0
margin_right = 540.0
margin_bottom = 643.0

[connection signal="button_up" from="Grid/BLeftArrow" to="." method="_on_BLeftArrow_button_up"]
[connection signal="button_up" from="Grid/BRightArrow" to="." method="_on_BRightArrow_button_up"]
[connection signal="button_up" from="Select" to="." method="_on_Select_button_up"]
